# GreedyFHist

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  Untitled.ipynb  __main__.html  build.sh  debug.ipynb  example.sh  example.toml  example_2.toml  example_groupwise.toml  example_registration.toml  example_transform.toml  greedyfhist.html  meta.yml  old_setup_file  pyproject.toml  setup.cfg_old2  setup.py_old
code_to_copy/greedyfhist/: __init__.py  __main__.py
code_to_copy/greedyfhist/registration/: greedy_f_hist.py
code_to_copy/greedyfhist/utils/: utils.py
doc_source/: conf.py  installation.rst  pairwise.rst
docker/: Dockerfile_greedy  Dockerfile_greedyfhist
docs/: Makefile  conf.py  config.rst  example_usage.md  index.md  installation.md  license.rst  pairwise.rst  requirements.txt  usage.md
docs/examples/: pairwise.md
docs/source/: api.rst  conf.py  config.rst  groupwise.rst  index.md  index.rst  installation.rst  license.rst  pairwise.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: layout.html
docs/source/usage/: config.rst  groupwise.rst  pairwise.md
docs/usage/: groupwise.md
examples/groupwise_examples/: hes_mask.tif  hes_ps.csv  ihc_mask.tif  ihc_ps.csv  mts_mask.tif  mts_ps.csv
examples/notebooks/: groupwise.ipynb  pairwise.ipynb
examples/pairwise_examples/annotations/: moving_pointset.csv
examples/scripts/: example_groupwise_registration.sh  example_groupwise_registration.toml  example_pairwise_registation.sh  example_registration.toml
greedyfhist/: __init__.py  __main__.py  __version__.py  cmdln_processor.py  custom_types.py
greedyfhist/data_types/: __init__.py  geojson.py  geojson_data.py  histology_section.py  image.py  image_deprecated.py  ome_tiff_image.py  pointset.py
greedyfhist/options/: __init__.py  options.py  segmentation_options.py
greedyfhist/registration/: __init__.py  greedy_f_hist.py  greedy_f_hist_backup.py  greedy_f_hist_new.py  greedy_f_hist_old.py  result_types.py
greedyfhist/segmentation/: __init__.py  segmenation.py  segmentation.py  yolo8_parsing.py
greedyfhist/utils/: decorators.py  geojson_utils.py  image.py  io.py  metrics.py  tiling.py  utils.py
greedyfhist_old/registration/: greedy_f_hist.py
greedyfhist_old/utils/: image.py
scripts/: Untitled.ipynb  Untitled1.ipynb  evaluation_greedyfhist.py  evaluation_greedyfhist_ablation.py  evaluation_greedyfhist_disable_denoising_deformable.py  evaluation_greedyfhist_exhaustive_params.py  multiomics_dataset_registration_2_7_evaluation.py
secrect_scripts/: Section6_reg.ipynb  Untitled_1.ipynb  evaluation_greedyfhist_disable_denoising_deformable.py  evaluation_greedyfhist_evaluation_best_sigmas.py  evaluation_greedyfhist_groupwise_all.py  evaluation_greedyfhist_groupwise_nonrigid.py  evaluation_greedyfhist_no_def_ms.py  evaluation_greedyfhist_no_denoising_def.py  evaluation_greedyfhist_sigma_tests.py  evaluation_greedyfhist_sigma_tests_all_cores.py  evaluation_greedyfhist_sigma_tests_one_core.py  evaluation_greedyfhist_sigma_tests_repeat.py  evaluation_greedyfhist_standard.py  evaluation_greedyfhist_standard_all_rev.py  evaluation_greedyfhist_standard_old.py  multiomics_dataset_registration_evaluation.py  multiomics_dataset_registration_exhaustive_5.py  multiomics_dataset_registration_exhaustive_5_final.py  multiomics_dataset_registration_multistep_evaluation.py  multiomics_dataset_registration_stepwise_evaluation.py  multiomics_dataset_registration_strategy_3_evaluation.py  test.ipynb
secrect_scripts/out2/registrations/0/: cmdl_returns.txt  reg_params.json
secrect_scripts/out2/registrations/0/metrics/full_resolution/: Affine.mat
secrect_scripts/out2/registrations/0/metrics/small_resolution/: small_affine.mat
secrect_scripts/tmp2/0/: Affine_init.mat
temp_docs/: index.md  installation.md
temp_docs/examples/: groupwise.md  pairwise.md
