[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.poetry]
name = "GreedyFHist"
version = "0.0.3-rc1"
description = "Registration for stained histology images"
authors = ["Maximilian Wess <maximilian.wess@ntnu.no>"]

include = [
    { path = "greedyfhist/model_data/segmentation/default_yolo.onnx", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]

click = "^8.1.6"
geojson = "^3.1.0"
imagecodecs = "^2024.6.1"
imageio = "^2.31.5"
numpy = "^1.24.4"
opencv-python = "^4.8.1.78"
pandas = "^2.0.3"
Pillow = "^10.1.0"
scikit-image = "^0.21.0"
scipy = "^1.10.1"
setuptools = "^70.0.0"
SimpleITK = "^2.2.1"
stack-data = "^0.6.2"
tifffile = "^2023.7.10"
tqdm = "^4.66.1"
# Remove ultralytics dependency, since we only need opencv for reading the segmentation model
onnxruntime = "1.17.0"
toml = "0.10.2"
# ultralytics = "^8.0.199"
pyvips = "^2.2.3"
multiprocess = "^0.70.17"
matplotlib = "^3.10.0"

# For documentation.... TODO: Can probably be removed again.
sphinx-hoverxref = "^1.4.2"
sphinx-notfound-page = "^1.1.0"
sphinx-rtd-theme = "^3.0.2"


[tool.poetry.dev-dependencies]
mypy = "^0.812"

[tool.poetry.scripts]
greedyfhist = "greedyfhist.__main__:cli"
