[build-system]
requires = ["poetry>=2.0.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.poetry]
version = "0.0.3-rc5"
readme = "README.md"

[project]
name = "GreedyFHist"
description = "Registration for stained histology images"
#authors = ["Maximilian Wess <maximilian.wess@ntnu.no>"]
authors = [
    {name = "Maximilian Wess", email = "maximilian.wess@ntnu.no"},
]
dynamic = ["version"]
license = {text = "MIT"}
requires-python = ">=3.10"

include = [
    { path = "greedyfhist/model_data/segmentation/default_yolo.onnx", format = ["sdist", "wheel"] }
]

dependencies = [
    "click (>=8.1.7)",
    "geojson (>=3.1.0)",
    "imagecodecs (>=2024.6.1)",
    "imageio (>=2.31.5)",
    "numpy (>=2.0.0)",
    "opencv-python (>=4.8.1.78)",
    "pandas (>=2.0.3)",
    "Pillow (>=10.1.0)",
    "scikit-image (>=0.21.0)",
    "scipy (>=1.10.1)",
    "setuptools (>=70.0.0)",
    "SimpleITK (>=2.2.1)",
    "stack-data (>=0.6.2)",
    "tifffile (>=2023.7.10)",
    "tqdm (>=4.66.1)",
    "onnxruntime (>=1.22.1)",
    "toml (>=0.10.2)",
    "pyvips (>=2.2.3)",
    "multiprocess (>=0.70.17)",
    "matplotlib (>=3.10.0)",
    "bioio",
    "bioio-bioformats",
    "bioio-ome-tiff",
    "bioio-imageio",
    "bioio-tifffile",
    "bioio_ome_zarr"
]

[tool.poetry.dev-dependencies]
mypy = "^0.812"

[tool.poetry.scripts]
greedyfhist = "greedyfhist.__main__:cli"
