[project]
name = "GreedyFHist"
description = "Registration for stained histology images"
authors = [
    {name = "Maximilian Wess", email = "maximilian.wess@ntnu.no"},
]
dynamic = ["version"]
license = "MIT"
requires-python = ">=3.11"
version = "0.0.3-rc6"
readme = "README.md"

dependencies = [
    "click (>=8.1.7)",
    "geojson (>=3.1.0)",
    "imagecodecs (>=2024.6.1)",
    "imageio (>=2.31.5)",
    "numpy (>=2.0.0)",
    "opencv-python (>=4.8.1.78)",
    "pandas (>=2.0.3)",
    "Pillow (>=10.1.0)",
    "scikit-image (>=0.21.0)",
    "scipy (>=1.10.1)",
    "setuptools (>=70.0.0)",
    "SimpleITK (>=2.2.1)",
    "stack-data (>=0.6.2)",
    "tifffile (>=2023.7.10)",
    "tqdm (>=4.66.1)",
    "onnxruntime (>=1.22.1)",
    "toml (>=0.10.2)",
    "pyvips (>=2.2.3)",
    "multiprocess (>=0.70.17)",
    "matplotlib (>=3.10.0)",
    "bioio (>= 3.0.0)",
    "bioio-bioformats (>=1.3.0)",
    "bioio-ome-tiff (>=1.4.0)",
    "bioio-imageio (>=1.3.0)",
    "bioio-tifffile (>=1.3.0)",
    "bioio_ome_zarr (>=3.0.0)"
]

[build-system]
requires = ["poetry-core>=2,<3"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

include = [
    { path = "greedyfhist/model_data/segmentation/default_yolo.onnx", format = ["sdist", "wheel"] }
]

[tool.poetry.group.dev.dependencies]
mypy = "^0.812"

[project.scripts]
greedyfhist = "greedyfhist.__main__:cli"

